2003-10-06  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Ship PeopleView.py and PeopleStore.py.

2003-10-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SelectChild.py: handle surname prefixes
	* src/FamilyView.py: handle surname prefixes
	* src/QuickAdd.py: handle surname prefixes
	* src/PeopleView.py: force a selection with a new person
	* src/PeopleStore.py: select correct model

2003-10-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PeopleView.py: Correct references to history in gramps_main.
	* src/gramps_main.py: Switch away from separate history submenu.
	* src/gramps.glade: Likewise.

2003-10-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleView.py: broken out of gramps_main.py, fixed 
	add/delete
	* src/PeopleStore.py: TreeStore wrapper for PeopleView
	* src/gramps_main.py: people view removed, fixed add/delete
	* src/RelLib.py: add surname to display info for each person,
	allows grouping by name
	* src/Report.py: Change button from Apply to 
	"Generate report"

2003-10-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (BookReportSelector.__init__): 
	Use underline for labels.
	* src/plugins/book.glade: Rework the dialog's layout.

2003-09-29  Alex Roitman  <shura@alex.neuro.umn.edu>
	* TODO: Update the list with the postponed todo items.
	* configure.in: Increment release number.
	* src/Plugins.py: Fix label for the tools dialog. 
	* src/gramps.glade: Add accelerators to filter controls. 
	* src/places.glade: Fix accelerator in Edit Plase dialog. 
	* src/gramps_main.py: Typo.
	* src/PlaceView.py: Likewise.
	* src/GenericFilter.py: Likewise.
	* src/filters/MatchSndEx2.py: Make consistent use of ...
	* src/filters/RegExMatch.py: Likewise.
	* src/filters/SubString.py: Likewise.

2003-09-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fixed delete person problem.

2003-09-28  Don Allingham  <dallingham@users.sourceforge.net>